--- a/CarPlan/Properties/Resources.resx
+++ b/CarPlan/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="logo121" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ogAAAgB_ceA_960" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ogAAAgB_ceA-960.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
